--- a/.github/workflows/vpc-terraform.yml
+++ b/.github/workflows/vpc-terraform.yml
@@ -59,11 +59,8 @@ jobs:
         run: terraform validate
 
       - name: Terraform Plan
-        run: terraform plan -no-color -input=false \
-          -var="environment=${{ env.ENVIRONMENT }}" \
-          -var-file="environments/${{ env.ENVIRONMENT }}/terraform.tfvars" \
-          -out=tfplan
+        run: terraform plan -input=false -var="environment=dev" -var-file="environments/dev/terraform.tfvars" -out=tfplan
 
       - name: Terraform Apply
         if: github.event_name == 'workflow_dispatch'
-        run: terraform apply -auto-approve tfplan
+        run: terraform apply -auto-approve -input=false tfplan
