--- a/.github/workflows/vpc-terraform.yml
+++ b/.github/workflows/vpc-terraform.yml
@@ -58,12 +58,7 @@ jobs:
         run: terraform validate
 
       - name: Terraform Plan
-        run: |
-          terraform plan \
-            -input=false \
-            -var="environment=dev" \
-            -var-file="environments/dev/terraform.tfvars" \
-            -out=tfplan
+        run: terraform plan -input=false -var="environment=${{ env.ENVIRONMENT }}" -out=tfplan
 
       - name: Terraform Apply (VPC)
         if: github.event_name == 'workflow_dispatch'
