--- a/.github/workflows/vpc-terraform.yml
+++ b/.github/workflows/vpc-terraform.yml
@@ -1,39 +1,39 @@
-name: Terraform VPC Plan & Apply
+name: Terraform VPC Workflow
 
 on:
   workflow_dispatch:
     inputs:
       environment:
-        description: 'Deployment environment'
+        description: 'Environment to deploy'
         required: true
         default: 'dev'
 
 jobs:
-  terraform:
-    name: Terraform VPC
+  terraform-vpc:
+    name: Terraform VPC Plan & Apply
     runs-on: ubuntu-latest
+
     env:
-      AWS_REGION: eu-west-2   # Default region if not in tfvars
+      AWS_REGION: eu-west-2
+      AWS_S3_BUCKET: github-oidc-bucket-terraform
+      DYNAMODB_TABLE: terraform-lock-table
 
     steps:
-      - name: Checkout Repo
+      - name: Checkout code
         uses: actions/checkout@v3
 
       - name: Setup Terraform
-        uses: hashicorp/setup-terraform@v2
+        uses: hashicorp/setup-terraform@v3
         with:
           terraform_version: 1.9.5
 
-      - name: Configure AWS Credentials
+      - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v2
         with:
-          role-to-assume: ${{ secrets.AWS_ROLE }}
+          role-to-assume: ${{ secrets.AWS_ROLE_ARN }}
           aws-region: ${{ env.AWS_REGION }}
-          role-session-name: GitHub-OIDC-VPC
 
-      - name: Terraform Init
-        run: |
-          - name: Terraform Init (Reconfigure Backend)
+      - name: Terraform Init (Reconfigure Backend)
         working-directory: ./terraform/vpc
         run: |
           terraform init -reconfigure \
@@ -44,16 +44,12 @@ jobs:
             -backend-config="encrypt=true"
 
       - name: Terraform Plan
+        working-directory: ./terraform/vpc
         run: |
-          terraform plan \
-            -input=false \
-            -var-file="environments/${{ github.event.inputs.environment }}/terraform.tfvars" \
-            -out=tfplan
-
+          terraform plan -input=false -out=tfplan
 
       - name: Terraform Apply
         if: github.ref == 'refs/heads/main'
+        working-directory: ./terraform/vpc
         run: |
-          terraform -chdir=vpc apply \
-            -input=false \
-            tfplan
+          terraform apply -input=false -auto-approve tfplan
