--- a/.github/workflows/vpc-terraform.yml
+++ b/.github/workflows/vpc-terraform.yml
@@ -4,37 +4,32 @@ on:
   workflow_dispatch:
     inputs:
       environment:
-        description: 'Environment to deploy'
+        description: 'Deployment environment'
         required: true
         default: 'dev'
 
+env:
+  AWS_REGION: eu-west-2
+  AWS_S3_BUCKET: github-oidc-bucket-terraform
+  DYNAMODB_TABLE: terraform-locks
+
 jobs:
-  terraform-vpc:
-    name: Terraform VPC Plan & Apply
+  terraform:
+    name: Terraform VPC
     runs-on: ubuntu-latest
 
-    env:
-      AWS_REGION: eu-west-2
-      AWS_S3_BUCKET: github-oidc-bucket-terraform
-      DYNAMODB_TABLE: terraform-lock-table
-
     steps:
-      - name: Checkout code
+      - name: Checkout Repository
         uses: actions/checkout@v3
 
-      - name: Setup Terraform
-        uses: hashicorp/setup-terraform@v3
-        with:
-          terraform_version: 1.9.5
-
-      - name: Configure AWS credentials
+      - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v2
         with:
-          role-to-assume: ${{ secrets.AWS_ROLE_ARN }}
           aws-region: ${{ env.AWS_REGION }}
+          role-to-assume: ${{ secrets.AWS_ROLE_TO_ASSUME }}
 
       - name: Terraform Init (Reconfigure Backend)
-        working-directory: ./terraform/vpc
+        working-directory: ./terraform
         run: |
           terraform init -reconfigure \
             -backend-config="bucket=${{ env.AWS_S3_BUCKET }}" \
@@ -44,12 +39,19 @@ jobs:
             -backend-config="encrypt=true"
 
       - name: Terraform Plan
-        working-directory: ./terraform/vpc
+        working-directory: ./terraform
         run: |
-          terraform plan -input=false -out=tfplan
+          terraform plan -input=false \
+            -var="aws_region=${{ env.AWS_REGION }}" \
+            -var="vpc_cidr=10.10.0.0/16" \
+            -var='public_subnets=["10.10.1.0/24","10.10.2.0/24"]' \
+            -var='private_subnets=["10.10.101.0/24","10.10.102.0/24"]' \
+            -var='availability_zones=["eu-west-2a","eu-west-2b"]' \
+            -var='tags={Project="aws-vpc-demo",Owner="PlatformTeam"}' \
+            -out=tfplan
 
       - name: Terraform Apply
-        if: github.ref == 'refs/heads/main'
-        working-directory: ./terraform/vpc
+        if: github.event_name == 'workflow_dispatch'
+        working-directory: ./terraform
         run: |
           terraform apply -input=false -auto-approve tfplan
