new vpc workflow

--- a/.github/workflows/vpc-terraform.yml
+++ b/.github/workflows/vpc-terraform.yml
@@ -8,6 +8,10 @@ on:
         required: true
         default: 'dev'
 
+permissions:
+  id-token: write
+  contents: read
+          
 env:
   AWS_REGION: eu-west-2
   AWS_S3_BUCKET: github-oidc-bucket-terraform
