--- a/.github/workflows/vpc-terraform.yml
+++ b/.github/workflows/vpc-terraform.yml
@@ -41,7 +41,7 @@ jobs:
       - name: Verify backend S3 state file
         run: |
           echo "Checking S3 backend file:"
-          aws s3 ls s3://$AWS_S3_BUCKET/aws-vpc/${ENVIRONMENT}/terraform.tfstate || echo "⚠️ State file not found in S3"
+          aws s3 ls s3://$AWS_S3_BUCKET/aws-vpc/${environment}/terraform.tfstate || echo "⚠️ State file not found in S3"
 
       - name: Terraform Init (Reconfigure Backend)
         working-directory: .
@@ -49,7 +49,7 @@ jobs:
           echo "Using S3 bucket: ${{ env.AWS_S3_BUCKET }}"
           terraform init -reconfigure \
             -backend-config="bucket=${{ env.AWS_S3_BUCKET }}" \
-            -backend-config="key=aws-vpc/${{ env.ENVIRONMENT }}/terraform.tfstate" \
+            -backend-config="key=aws-vpc/${{ github.event.inputs.environment }}/terraform.tfstate"\
             -backend-config="region=${{ env.AWS_REGION }}" \
             -backend-config="dynamodb_table=${{ env.DYNAMODB_TABLE }}" \
             -backend-config="encrypt=true"
