--- a/.github/workflows/vpc-terraform.yml
+++ b/.github/workflows/vpc-terraform.yml
@@ -76,6 +76,5 @@ jobs:
 
       - name: Terraform Apply
         if: github.event_name == 'workflow_dispatch'
-        working-directory: ./terraform
-        run: |
-          terraform apply -input=false -auto-approve tfplan
+        run: terraform apply -input=false -auto-approve tfplan
+
