--- a/.github/workflows/vpc-terraform.yml
+++ b/.github/workflows/vpc-terraform.yml
@@ -13,9 +13,9 @@ permissions:
   contents: read
 
 env:
-  AWS_REGION: ${{ secrets.GH_AWS_REGION }}
-  AWS_S3_BUCKET: ${{ secrets.GH_AWS_S3_BUCKET }}
-  DYNAMODB_TABLE: ${{ secrets.GH_DYNAMODB_TABLE }}
+  AWS_REGION: ${{ secrets.AWS_REGION }}
+  AWS_S3_BUCKET: ${{ secrets.AWS_BUCKET_NAME }}
+  DYNAMODB_TABLE: ${{ secrets.DYNAMODB_TABLE }}
 
 jobs:
   terraform:
